--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="Hello! Welcome to Blair Shen's personal Website. I'm a UX designer and a HCI Master's student at the University of Michigan.">
-    <meta name="keywords" content="Blair, Shen, Yu-Yin, Portfolio, UX Reseacher, UX Designer, Design, Product, UI">
+    <meta name="keywords" content="Blair, Shen, Yu-Yin, Portfolio, UX Reseacher, senior, UX Designer, Design, Product, UI">
     <meta name="author" content="Blair Shen">
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <link rel="stylesheet" href="css/lightbox.css">
@@ -41,7 +41,7 @@
 
     <nav class="header-nav">
         <ul>
-            <li><a href = "#home_h1" ><div class="header-item">Works</div></a></li>
+            <li><a href = "#home_h1" ><div class="header-item">Work</div></a></li>
             <li><a href = "graphic.html" ><div class="header-item">Playground</div></a></li>
             <li><a href = "about.html" ><div class="header-item">About</div></a></li>
             <li><a href = "https://drive.google.com/file/d/18w1oRWLLk_Mq6Bys3CYqmiMeYtuNx90U/view?usp=sharing" target="_blank"><div class="header-item">Resume</div></a></li>
