--- a/about.html
+++ b/about.html
@@ -42,7 +42,7 @@
             <li><a href = "index.html" ><div class="header-item">Work</div></a></li>
             <li><a href = "graphic.html" ><div class="header-item">Playground</div></a></li>
             <li><a href = "about.html" ><div class="header-item">About</div></a></li>
-            <li><a href = "https://drive.google.com/file/d/1OekFso5PZZfHPDYHy_KhTiAXB17vkZ1y/view?usp=sharing" target="_blank"><div class="header-item">Resume</div></a></li>
+            <li><a href = "https://drive.google.com/file/d/18w1oRWLLk_Mq6Bys3CYqmiMeYtuNx90U/view?usp=sharing" target="_blank"><div class="header-item">Resume</div></a></li>
          </ul>
         
     </nav>
@@ -52,7 +52,7 @@
         <div class = "about_content">
         <img src="imgs/Home_1.png" class = "about" alt = "profile picture"/>
         <h1>Blair… who?</h1>   
-        <p>I came to the states to pursue Human-Computer Interaction (UX Design & Research) after completing my M.A. in Communication & Technology Studies in Taiwan. My background in literature, humanities, and social science allows me to solve problems through <b>translating research data into empathetic and logical design solutions</b>. My lifetime goal is to narrow the gap among genders, classes, and ethnicities via design.<br><br>During my free time you can find me dancing, consuming some nerdy content online, and training my cat to do dog tricks. Currently I’m building my Youtube channel to let people know more about UX and what it’s like to be in this industry.</p>
+        <p>I came to the states to pursue Human-Computer Interaction (UX Design & Research) after completing my M.A. in Communication & Technology Studies in Taiwan. My background in literature, humanities, and social science allows me to solve problems through <b>translating research data into empathetic and logical design solutions</b>. My lifetime goal is to narrow the gap among genders, classes, and ethnicities via design.<br><br>During my free time you can find me dancing, consuming some nerdy content online, and training my cat to do dog tricks.</p>
         <div class="project_photowrap">
             <div><img src="./imgs/about1.png" alt="About1"></div>
             <div><img src="./imgs/about2.png" alt="About2"></div>
