--- a/index.html
+++ b/index.html
@@ -289,7 +289,7 @@
 		</div>
 		<div class="bg_ivory">
 			<div class = "greeting">
-				<h2>Some of my talks</h2>
+				<h2>Some of My Talks</h2>
 				<p>I love contributing what I learned back to design communities.<br>Here are some selected talks I gave last year! :)</p>
 				<div class="video">
 					<video width="1280" height="720" src="imgs/Ignite UX.mp4" controls autoplay muted></video>
@@ -303,7 +303,7 @@
 
 		<div class = "contact_flex">
 			<div class = "card_title">
-				<h2>I earn my bread and butter by…</h2>
+				<h2>I Earn My Bread and Butter By…</h2>
 		</div>
 
 	<div class="card_wrap">
