--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
 		</div>
 		<div class = "mix_container"> 
 
-			<!--<div class="mix design">
+			<div class="mix design">
 				<a href="fomc.html" data-title="Fruit of the Month Club" aria-label="Fruit of the Month Club">
 					<div class="mix-overlay"></div>
 					<img src="imgs/d_fomc.png" alt="Fruit of the Month Club">
@@ -175,7 +175,7 @@
 					<h3>Harry &amp; David</h3>
 					<p>Fruit of the Month Club</p>
 				</div>
-			</div>-->
+			</div>
 
 			<div class="mix design">
 					<a href="juvo.html" data-title="AthleteJuvo" aria-label="AthleteJuvo">
