--- a/fomc.html
+++ b/fomc.html
@@ -113,9 +113,9 @@
 					</div>
 					<div class="tools">
 						<h3>Tools:</h3>
-						<img src="/imgs/sketch-logo.png" alt="Sketch" class="tool-logo">
-						<img src="/imgs/axure-logo.png" alt="Axure" class="tool-logo">
-						<img src="/imgs/usertesting-logo.png" alt="Usertesting.com" class="tool-logo">
+						<img src="imgs/sketch-logo.png" alt="Sketch" class="tool-logo">
+						<img src="imgs/axure-logo.png" alt="Axure" class="tool-logo">
+						<img src="imgs/usertesting-logo.png" alt="Usertesting.com" class="tool-logo">
 					</div>
 				</div>
 			</section>
@@ -175,7 +175,7 @@
 						<h3 data-aos="text-underline">
 							What are the current issues?
 						</h3>
-						<video width="1280" height="720" src="imgs/fomc_test.mp4" controls autoplay muted></video>
+						<video src="" alt="Original Page Test Recording"></video>
 						<p>
 							Based on the customer profile, I designed a series of usability tasks and recruited representative users from UserTesting.com. A few major issues include:
 						</p>
@@ -211,7 +211,7 @@
 						<h3 data-aos="text-underline">
 							What did I find out?
 						</h3>
-						<img src="/imgs/fomc_usability-overview.png" alt="Page Usability Problem Overview">
+						<img src="imgs/fomc_usability-overview.png" alt="Page Usability Problem Overview">
 					</div>
 				</section>
 
@@ -237,9 +237,9 @@
 							How can I make it happen?
 						</h3>
 						<h4>Product Page</h4>
-						<img src="/imgs/fomc_ideation-product-page.png" alt="Product Page Design Rationale">
+						<img src="imgs/fomc_ideation-product-page.png" alt="Product Page Design Rationale">
 						<h4>Image Gallery Modal</h4>
-						<img src="/imgs/fomc_ideation-image-gallery.png" alt="Image Gallery Modal Design Rationale">
+						<img src="imgs/fomc_ideation-image-gallery.png" alt="Image Gallery Modal Design Rationale">
 					</div>
 				</section>
 
@@ -250,11 +250,10 @@
 					<h2>Prototype</h2>
 					<div class="step-block">
 						<h3 data-aos="text-underline">
-							Medium-fidelity prototype test - What did the user feel?
+							How would it actually look and feel?
 						</h3>
-						<video width="1280" height="720" src="imgs/fomc_usertest1.mp4" controls autoplay muted></video>
-						<p>Using the wireframes and prototype as a starting point, I created a high-fidelity, interactive prototype.</p>
-						<video width="1280" height="720" src="imgs/fomc_hifi.mp4" controls autoplay muted></video>
+						<p>Using the wireframes as a starting point, I created a high-fidelity, interactive prototype.</p>
+						<video src="" alt="High Fidelity Interactive Prototype"></video>
 					</div>
 				</section>
 
@@ -262,7 +261,7 @@
 					<span data-aos="hide-fade" data-aos-anchor=".solution" data-aos-anchor-placement="top-center">
 						<div class="breakdown-floater" data-aos="fade" data-aos-anchor=".test" data-aos-anchor-placement="top-center"></div>
 					</span>
-					<h2>Remote user testing</h2>
+					<h2>Test</h2>
 					<div class="step-block">
 						<h3 data-aos="text-underline">
 							Are the interactions intuitive?
@@ -272,15 +271,14 @@
 							Do our customers react better to a touch-friendly, button UI or a traditional dropdown?
 						</h4>
 						<p>I wanted to update the design to something that felt more clean and modern while also being more mobile-friendly. It looked nice but it was a less familiar UI and I had to be sure it would work for my users. Thankfully, the initial tests showed that users appreciated the interaction.</p>
-						<img src="/imgs/fomc_experiment-1.png" alt="Circles vs Dropdown Comparison">
+						<img src="imgs/fomc_experiment-1.png" alt="Circles vs Dropdown Comparison">
 						<h4>Experiment 2:
 							Would reflecting the selected length/date on the photo thumbnail be helpful?
 						</h4>
 						<p>To reduce scrolling for detailed information, some data was tucked away behind a click. The question for me was whether users would notice and feel comfortable with a small piece of key information regarding the length of the club purchase rather than a general information button.</p>
-						<img src="/imgs/fomc_experiment-2.png" alt="Date Length vs Action Label Comparison">
+						<img src="imgs/fomc_experiment-2.png" alt="Date Length vs Action Label Comparison">
 					</div>
 					<div class="step-block">
-						<h2>A/B Testing</h2>
 						<h3 data-aos="text-underline">
 							What brings the most business value?
 						</h3>
@@ -288,18 +286,18 @@
 							How can we promote the best value call out &amp; price order?
 						</h4>
 						<p>As a promotion-focused company, our customers rely heavily on coupons and seasonal discounts. Hence highlighting those offers is essential for the product page.</p>
-						<img src="/imgs/fomc_best-value-1.png" alt="First Iteration of Club Length">
+						<img src="imgs/fomc_best-value-1.png" alt="First Iteration of Club Length">
 						<p>After A/B testing, we learned that sorting the price range from high to low helps boost the Average Order Value. However, the red call out made some customers think the best value option is pre-selected.</p>
-						<img src="/imgs/fomc_best-value-2.png" alt="Second Iteration of Club Length">
+						<img src="imgs/fomc_best-value-2.png" alt="Second Iteration of Club Length">
 						<p>I fine-tuned the best value call out to align with customer expectations by making the option pre-selected and filling the background using our branded black to distinguish from other options.</p>
-						<img src="/imgs/fomc_best-value-3.png" alt="Final Iteration of Club Length">
+						<img src="imgs/fomc_best-value-3.png" alt="Final Iteration of Club Length">
 
 						<h4>Experiment 2:
 							How can we maximize coupon conversions?
 						</h4>
 						<p>After A/B testing for awhile, we realized customers didn’t use coupons as much on the new design. In response, I altered the coupon placement to sit above the Add To Cart button and while changing the background color of the panel to make the coupon message "pop". Conversion rate and coupon usage increased significantly after the adjustment.</p>
-						<img src="/imgs/fomc_coupon-1.png" alt="First Iteration of Coupon Code">
-						<img src="/imgs/fomc_coupon-2.png" alt="Final Iteration of Coupon Code">
+						<img src="imgs/fomc_coupon-1.png" alt="First Iteration of Coupon Code">
+						<img src="imgs/fomc_coupon-2.png" alt="Final Iteration of Coupon Code">
 					</div>
 				</section>
 			</section>
@@ -307,7 +305,7 @@
 			<section class="solution banner">
 				<div class="solution-content">
 					<h2>Live Design</h2>
-					<img src="/imgs/fomc_live.png" alt="Product Page Design Rationale">
+					<video src="" alt="Final Design Video Summary"></video>
 				</div>
 			</section>
 
@@ -333,9 +331,11 @@
 						</div>
 					</div>
 				</div>
+				<video src="" alt="Positive Feedback Video"></video>
 				<h2>What I Learned</h2>
 				<p>
-					Even a tiny visual change matters in e-commerce. B2C E-commerce has its unique UX practices where not only do we need to focus on perfect user flows but final visual details are just as critical. Of course, all of the assessments took place within a fickle market and customer behavior varied significantly from day to day. H&D’s customer demographics also lean heavily towards older adults which brings a unique set of challenges and considerations. I needed to balance business needs while advocating for the users and measuring against a fluid backdrop. It was definitely a rewarding experience and helped lay down a solid foundation for my later projects at H&D.
+					Even a tiny visual change matters in e-commerce
+					B2C E-commerce has its unique UX practices where not only do we need to focus on perfect user flows but final visual details are just as critical. Of course, all of the assessments took place within a fickle market and customer behavior varied significantly from day to day. H&D’s customer demographics also lean heavily towards older adults which brings a unique set of challenges and considerations. I needed to balance business needs while advocating for the users and measuring against a fluid backdrop. It was definitely a rewarding experience and helped lay down a solid foundation for my later projects at H&D.
 				</p>
 			</section>
 		</main>
