--- a/fomc.html
+++ b/fomc.html
@@ -305,7 +305,7 @@
 			<section class="solution banner">
 				<div class="solution-content">
 					<h2>Live Design</h2>
-					<video src="" alt="Final Design Video Summary"></video>
+					<img src="imgs/fomc_live.png" alt="Final Iteration of Coupon Code">
 				</div>
 			</section>
 
