--- a/fomc.html
+++ b/fomc.html
@@ -175,7 +175,7 @@
 						<h3 data-aos="text-underline">
 							What are the current issues?
 						</h3>
-						<video src="" alt="Original Page Test Recording"></video>
+						<video width="1152" src="imgs/fomc_test.mp4" controls autoplay muted></video>
 						<p>
 							Based on the customer profile, I designed a series of usability tasks and recruited representative users from UserTesting.com. A few major issues include:
 						</p>
@@ -253,7 +253,7 @@
 							How would it actually look and feel?
 						</h3>
 						<p>Using the wireframes as a starting point, I created a high-fidelity, interactive prototype.</p>
-						<video src="" alt="High Fidelity Interactive Prototype"></video>
+						<video width="1152" src="imgs/fomc_hifi.mp4" controls autoplay muted></video>
 					</div>
 				</section>
 
@@ -331,7 +331,7 @@
 						</div>
 					</div>
 				</div>
-				<video src="" alt="Positive Feedback Video"></video>
+				<!--<video src="" alt="Positive Feedback Video"></video>-->
 				<h2>What I Learned</h2>
 				<p>
 					Even a tiny visual change matters in e-commerce
