--- a/index.html
+++ b/index.html
@@ -12,27 +12,27 @@
     <meta name="theme-color" content="#ffffff">
     
     <!-- Styles -->
-    <link rel="stylesheet" href="css/aos.css?ckcachebust=74d0aca80dcdeb25d27266b617ce5d7e">
-    <link rel="stylesheet" href="css/lightbox.css?ckcachebust=6816c9615815af086f502ff6fd9f3129">
-    <link rel="stylesheet" type="text/css" href="css/style.css?ckcachebust=d33d40745950bdd85fc5420eed0537d7">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css?ckcachebust=609095893" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
+    <link rel="stylesheet" href="css/aos.css?ckcachebust=ff182cf9021e8bd9eadf777fa872a909">
+    <link rel="stylesheet" href="css/lightbox.css?ckcachebust=c41a28e67873e3493b4486e923d4a6fc">
+    <link rel="stylesheet" type="text/css" href="css/style.css?ckcachebust=784ecd53b703cc8553b57bad5b974aaa">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css?ckcachebust=609318184" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
     
     <!-- Icons -->
-    <link rel="apple-touch-icon" sizes="57x57" href="/apple-icon-57x57.png?ckcachebust=1588751d3ac2130377d89060459d71c0">
-    <link rel="apple-touch-icon" sizes="60x60" href="/apple-icon-60x60.png?ckcachebust=d1f0320a3c5f369a12f829fdb731a77e">
-    <link rel="apple-touch-icon" sizes="72x72" href="/apple-icon-72x72.png?ckcachebust=028b191bc6d0bbd2e97a648e3d93f314">
-    <link rel="apple-touch-icon" sizes="76x76" href="/apple-icon-76x76.png?ckcachebust=99cdf7c595a1511fc8ed624210a6e56d">
-    <link rel="apple-touch-icon" sizes="114x114" href="/apple-icon-114x114.png?ckcachebust=944971ea576eb6fd29f8c0b88309f18a">
-    <link rel="apple-touch-icon" sizes="120x120" href="/apple-icon-120x120.png?ckcachebust=f7f3dd27d3def4c2de321ccb75e6e77f">
-    <link rel="apple-touch-icon" sizes="144x144" href="/apple-icon-144x144.png?ckcachebust=c1db417960d4d2d5759771dcca59ba76">
-    <link rel="apple-touch-icon" sizes="152x152" href="/apple-icon-152x152.png?ckcachebust=0d8df397f1b014fa7f551424201d7135">
-    <link rel="apple-touch-icon" sizes="180x180" href="/apple-icon-180x180.png?ckcachebust=f57068029547a38b3868a30a39ce6f7b">
-    <link rel="icon" type="image/png" sizes="192x192"  href="/android-icon-192x192.png?ckcachebust=1d2f917596c3d0d7b50c2a4fc0ee4863">
-    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png?ckcachebust=286148e6ce445bf0c23a785697f8d941">
-    <link rel="icon" type="image/png" sizes="96x96" href="/favicon-96x96.png?ckcachebust=4c4bff9ec36154be0b6491d413740517">
-    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png?ckcachebust=912b488949724ba5e6cbbc1109476b53">
-    <link rel="manifest" href="/manifest.json?ckcachebust=c3efb44612a7d966ed394eda8c454687">
+    <link rel="apple-touch-icon" sizes="57x57" href="/apple-icon-57x57.png?ckcachebust=0971ed54eabffd2aa2227fca98ce5344">
+    <link rel="apple-touch-icon" sizes="60x60" href="/apple-icon-60x60.png?ckcachebust=6b75a0cbde63e2f3cd5b5386665dba6e">
+    <link rel="apple-touch-icon" sizes="72x72" href="/apple-icon-72x72.png?ckcachebust=451e751318a5f04ddae8f3da281471d6">
+    <link rel="apple-touch-icon" sizes="76x76" href="/apple-icon-76x76.png?ckcachebust=e2b71b025bc0803a91ad2d1e0769ed19">
+    <link rel="apple-touch-icon" sizes="114x114" href="/apple-icon-114x114.png?ckcachebust=4b9699cc33d2f1f87013cf0a8f10895b">
+    <link rel="apple-touch-icon" sizes="120x120" href="/apple-icon-120x120.png?ckcachebust=8b475773b17e7fa55adcfb9087fd0d19">
+    <link rel="apple-touch-icon" sizes="144x144" href="/apple-icon-144x144.png?ckcachebust=d05ca023dbfc53049df52e2c0da6629f">
+    <link rel="apple-touch-icon" sizes="152x152" href="/apple-icon-152x152.png?ckcachebust=7205e02883e4f6450c83e3bf5872c1b8">
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-icon-180x180.png?ckcachebust=0e27c58c4b828165ffc169949c5ffc11">
+    <link rel="icon" type="image/png" sizes="192x192"  href="/android-icon-192x192.png?ckcachebust=0db9cc99a1164d7c15228048dc29587f">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png?ckcachebust=aaa870a502fc3904a042e2c67c231605">
+    <link rel="icon" type="image/png" sizes="96x96" href="/favicon-96x96.png?ckcachebust=10d6c6158f1f1acaafb682f5e43126e4">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png?ckcachebust=88bc8b7ba06329aba8139eadccdf8482">
+    <link rel="manifest" href="/manifest.json?ckcachebust=ed2282a3ca9a06f5d8dc0462c1d51d34">
     <title >Blair Shen</title>
 </head>
 
@@ -166,16 +166,16 @@
 		</div>
 		<div class = "mix_container"> 
 
-			<!--<div class="mix design">
+			<div class="mix design">
 				<a href="fomc.html" data-title="Fruit of the Month Club" aria-label="Fruit of the Month Club">
 					<div class="mix-overlay"></div>
 					<img src="imgs/d_fomc.png" alt="Fruit of the Month Club">
 				</a>
 				<div class="mix-details fadeIn-top">
 					<h3>Harry &amp; David</h3>
-					<p>Fruit of the Month Club</p>
+					<p>Fruit of the Month Club / Web</p>
 				</div>
-			</div>-->
+			</div>
 
 			<div class="mix design">
 					<a href="juvo.html" data-title="AthleteJuvo" aria-label="AthleteJuvo">
@@ -184,7 +184,7 @@
 					</a>
 					<div class="mix-details fadeIn-top">
 						<h3>AthleteJuvo</h3>
-						<p>Smart rehab assistant</p>
+						<p>Smart rehab assistant / App</p>
 					</div>
 			</div>
 
@@ -195,7 +195,7 @@
 				</a>
 				<div class="mix-details fadeIn-top">
 						<h3>St. Patrick Senior Center</h3>
-						<p>Website revamp project</p>
+						<p>Website revamp project / Web</p>
 				</div>
 			</div>
 
@@ -206,7 +206,7 @@
 				</a>
 				<div class="mix-details fadeIn-top">
 						<h3>Yahoo Native Ads Study</h3>
-						<p>Mixed methods usability study</p>
+						<p>Mixed methods usability study / Eye-tracking</p>
 				</div>
 			</div>
 
@@ -239,7 +239,7 @@
 					</a>
 					<div class="mix-details fadeIn-top">
 						<h3>CommonWealth</h3>
-						<p>Event management and ticketing website</p>
+						<p>Event management and ticketing website / Research</p>
 					</div>
 				</div>
 
@@ -250,7 +250,7 @@
 				</a>
 				<div class="mix-details fadeIn-top">
 						<h3>Networking study</h3>
-						<p>A UX study for online job boards</p>
+						<p>A UX study for online job boards / Research</p>
 				</div>
 			</div>
 
@@ -261,7 +261,7 @@
 				</a>
 				<div class="mix-details fadeIn-top">
 						<h3>Michigan ZoomIn</h3>
-						<p>A usability study for a crowdsourcing service</p>
+						<p>A usability study for a crowdsourcing service / Research</p>
 				</div>
 			</div>
 
@@ -370,12 +370,12 @@
 				<p>Blair Shen &copy; 2020</p>
 		</footer>
 		
-		<script src="js/jquery-3.2.1.min.js?ckcachebust=0d2101ea765b07a9ad608e8b3bf1f82e"></script>
-		<script src="js/lightbox.min.js?ckcachebust=33f3bafaac83c68c67ec7af977620af3"></script>
-		<script src="js/aos.js?ckcachebust=97f006ddf2d054de99fbd91e4285120a"></script>
-		<script src="js/main.js?ckcachebust=2b3aca5839af5cf7b8b45ebd9b9ebb2f"></script>
-		<script src="js/form.js?ckcachebust=27adaff14fd95355d3482eb1350620db"></script>
-		<script src="js/typewriter.js?ckcachebust=2d8540bea956ab12a5f241d8ede0b156"></script>
+		<script src="js/jquery-3.2.1.min.js?ckcachebust=5ff90121b668a1604a3db2c317606b18"></script>
+		<script src="js/lightbox.min.js?ckcachebust=91a901f0e5cf4fc69db8cc9a4a047727"></script>
+		<script src="js/aos.js?ckcachebust=7466b42165723d69708869c4bab28755"></script>
+		<script src="js/main.js?ckcachebust=412aaf4618c3d6e19394755b9cb883f0"></script>
+		<script src="js/form.js?ckcachebust=81b3bc86cebfe7bf57765389a3152936"></script>
+		<script src="js/typewriter.js?ckcachebust=6def9788abc2abfdabf3e1561f54e789"></script>
 
 	</body>
 </html>
