--- a/fomc.html
+++ b/fomc.html
@@ -211,7 +211,10 @@
 						<h3 data-aos="text-underline">
 							What did I find out?
 						</h3>
-						<img src="imgs/fomc_usability-overview.png" alt="Page Usability Problem Overview">
+						<div class="magnify-wrapper">
+							<div class="magnify-focus"></div>
+							<img class="magnify-image" src="imgs/fomc_usability-overview.png" alt="Page Usability Problem Overview">
+						</div>
 					</div>
 				</section>
 
