--- a/graphic.html
+++ b/graphic.html
@@ -63,6 +63,32 @@
 
       <div class = "grid"> 
 
+      <div class="item">
+        <a href="./imgs/UI_HappyPlant.gif" data-lightbox="gallery" data-title="Plant care app" aria-label="Plant care app">
+          <img src="imgs/UI_HappyPlant.gif" alt="Plant care app">
+        </a>
+      </div>
+
+      
+
+      <div class="item">
+        <a href="./imgs/UI_MixMatch.gif" data-lightbox="gallery" data-title="Mix and Match Web UI" aria-label="Mix and Match Web UI">
+          <img src="imgs/UI_MixMatch.gif" alt="Mix and Match Web UI">
+        </a>
+    </div>
+
+    <div class="item">
+      <a href="./imgs/UI_Store.gif" data-lightbox="gallery" data-title="Store Locator" aria-label="Store Locator">
+        <img src="imgs/UI_Store.gif" alt="Store Locator">
+      </a>
+  </div>
+
+  <div class="item">
+    <a href="./imgs/UI_IRIS.gif" data-lightbox="gallery" data-title="IRIS Data Dashboard" aria-label="IRIS Data Dashboard">
+      <img src="imgs/UI_IRIS.gif" alt="IRIS Data Dashboard">
+    </a>
+  </div>
+
 		<div class="item">
 			<a href="./imgs/UI_13.png" data-lightbox="gallery" data-title="Poster - infographics" aria-label="Poster - infographics">
 			  <img src="imgs/UI_13_thumb.png" alt="Poster - infographics">
