--- a/fomc.html
+++ b/fomc.html
@@ -239,10 +239,18 @@
 						<h3 data-aos="text-underline">
 							How can I make it happen?
 						</h3>
-						<h4>Product Page</h4>
-						<img src="imgs/fomc_ideation-product-page.png" alt="Product Page Design Rationale">
-						<h4>Image Gallery Modal</h4>
-						<img src="imgs/fomc_ideation-image-gallery.png" alt="Image Gallery Modal Design Rationale">
+						<h4>Design Rationale - Product Page Wireframe</h4>
+						<div class="project_photowrap">
+							<div><a href="imgs/fomc_ideation-product-page@2x.png" data-lightbox="gallery" data-title="Wireframe - Product page" aria-label="Product page"><img src="./imgs/fomc_ideation-product-page.png" alt="Product page"></a></div>
+						</div>
+						<h4>Design Rationale - Product Alt Images Wireframe</h4>
+						<div class="project_photowrap">
+							<div><a href="imgs/fomc_ideation-image-gallery@2x.png" data-lightbox="gallery" data-title="Wireframe - Product alt images" aria-label="Wireframe - Product alt images"><img src="./imgs/fomc_ideation-image-gallery.png" alt="Wireframe - Product alt images"></a></div>
+						</div>
+						<h4>Design Rationale - Product Upsell Wireframe</h4>
+						<div class="project_photowrap">
+							<div><a href="imgs/fomc_ideation-upsell@2x.png" data-lightbox="gallery" data-title="Wireframe - Upsell interaction" aria-label="Wireframe - Upsell interaction"><img src="./imgs/fomc_ideation-upsell.png" alt="Wireframe - Upsell interaction"></a></div>
+						</div>
 					</div>
 				</section>
 
@@ -279,7 +287,9 @@
 							Would reflecting the selected length/date on the photo thumbnail be helpful?
 						</h4>
 						<p>To reduce scrolling for detailed information, some data was tucked away behind a click. The question for me was whether users would notice and feel comfortable with a small piece of key information regarding the length of the club purchase rather than a general information button.</p>
-						<img src="imgs/fomc_experiment-2.png" alt="Date Length vs Action Label Comparison">
+						<div class="project_photowrap">
+							<div><a href="imgs/fomc_experiment-2@2x.png" data-lightbox="gallery" data-title="Image snipe feedback" aria-label="Image snipe feedback"><img src="./imgs/fomc_experiment-2.png" alt="Image snipe feedback"></a></div>
+						</div>
 					</div>
 					<div class="step-block">
 						<h3 data-aos="text-underline">
@@ -299,8 +309,7 @@
 							How can we maximize coupon conversions?
 						</h4>
 						<p>After A/B testing for awhile, we realized customers didn’t use coupons as much on the new design. In response, I altered the coupon placement to sit above the Add To Cart button and while changing the background color of the panel to make the coupon message "pop". Conversion rate and coupon usage increased significantly after the adjustment.</p>
-						<img src="imgs/fomc_coupon-1.png" alt="First Iteration of Coupon Code">
-						<img src="imgs/fomc_coupon-2.png" alt="Final Iteration of Coupon Code">
+						<img src="imgs/fomc_coupon.png" alt="Iteration of Coupon Code">
 					</div>
 				</section>
 			</section>
