--- a/index.html
+++ b/index.html
@@ -12,27 +12,27 @@
     <meta name="theme-color" content="#ffffff">
     
     <!-- Styles -->
-    <link rel="stylesheet" href="css/aos.css?ckcachebust=ff182cf9021e8bd9eadf777fa872a909">
-    <link rel="stylesheet" href="css/lightbox.css?ckcachebust=c41a28e67873e3493b4486e923d4a6fc">
-    <link rel="stylesheet" type="text/css" href="css/style.css?ckcachebust=784ecd53b703cc8553b57bad5b974aaa">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css?ckcachebust=609318184" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
+    <link rel="stylesheet" href="css/aos.css?ckcachebust=68ca5eecc2467a3e9ae52866105c2a82">
+    <link rel="stylesheet" href="css/lightbox.css?ckcachebust=130e1a616600606af09669118c885f15">
+    <link rel="stylesheet" type="text/css" href="css/style.css?ckcachebust=b329dd90aad8dc411b3cb515b04dbf59">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css?ckcachebust=609802166" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
     
     <!-- Icons -->
-    <link rel="apple-touch-icon" sizes="57x57" href="/apple-icon-57x57.png?ckcachebust=0971ed54eabffd2aa2227fca98ce5344">
-    <link rel="apple-touch-icon" sizes="60x60" href="/apple-icon-60x60.png?ckcachebust=6b75a0cbde63e2f3cd5b5386665dba6e">
-    <link rel="apple-touch-icon" sizes="72x72" href="/apple-icon-72x72.png?ckcachebust=451e751318a5f04ddae8f3da281471d6">
-    <link rel="apple-touch-icon" sizes="76x76" href="/apple-icon-76x76.png?ckcachebust=e2b71b025bc0803a91ad2d1e0769ed19">
-    <link rel="apple-touch-icon" sizes="114x114" href="/apple-icon-114x114.png?ckcachebust=4b9699cc33d2f1f87013cf0a8f10895b">
-    <link rel="apple-touch-icon" sizes="120x120" href="/apple-icon-120x120.png?ckcachebust=8b475773b17e7fa55adcfb9087fd0d19">
-    <link rel="apple-touch-icon" sizes="144x144" href="/apple-icon-144x144.png?ckcachebust=d05ca023dbfc53049df52e2c0da6629f">
-    <link rel="apple-touch-icon" sizes="152x152" href="/apple-icon-152x152.png?ckcachebust=7205e02883e4f6450c83e3bf5872c1b8">
-    <link rel="apple-touch-icon" sizes="180x180" href="/apple-icon-180x180.png?ckcachebust=0e27c58c4b828165ffc169949c5ffc11">
-    <link rel="icon" type="image/png" sizes="192x192"  href="/android-icon-192x192.png?ckcachebust=0db9cc99a1164d7c15228048dc29587f">
-    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png?ckcachebust=aaa870a502fc3904a042e2c67c231605">
-    <link rel="icon" type="image/png" sizes="96x96" href="/favicon-96x96.png?ckcachebust=10d6c6158f1f1acaafb682f5e43126e4">
-    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png?ckcachebust=88bc8b7ba06329aba8139eadccdf8482">
-    <link rel="manifest" href="/manifest.json?ckcachebust=ed2282a3ca9a06f5d8dc0462c1d51d34">
+    <link rel="apple-touch-icon" sizes="57x57" href="/apple-icon-57x57.png?ckcachebust=63398785f7f05b1a3e07172e6408b0b5">
+    <link rel="apple-touch-icon" sizes="60x60" href="/apple-icon-60x60.png?ckcachebust=24206f37a27a5dbf2880fd48f78f7f8e">
+    <link rel="apple-touch-icon" sizes="72x72" href="/apple-icon-72x72.png?ckcachebust=ca61b96ca5a6142f31a63c3acb36779b">
+    <link rel="apple-touch-icon" sizes="76x76" href="/apple-icon-76x76.png?ckcachebust=f40e87326e3b0d59279dedcabc55b5af">
+    <link rel="apple-touch-icon" sizes="114x114" href="/apple-icon-114x114.png?ckcachebust=491781ccc60b4db30a9b1e2bfb6165e3">
+    <link rel="apple-touch-icon" sizes="120x120" href="/apple-icon-120x120.png?ckcachebust=ed3a803d9b48c8194799325ab4b4997b">
+    <link rel="apple-touch-icon" sizes="144x144" href="/apple-icon-144x144.png?ckcachebust=286a39574ec75e2fbd76dd4073f569d9">
+    <link rel="apple-touch-icon" sizes="152x152" href="/apple-icon-152x152.png?ckcachebust=ebbbce141d05128eb7148ad36de23fb8">
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-icon-180x180.png?ckcachebust=b1ef23861245d7085d12a8f47f4d8ae1">
+    <link rel="icon" type="image/png" sizes="192x192"  href="/android-icon-192x192.png?ckcachebust=16eee6ad135bf6e3a72c42f11a799e0a">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png?ckcachebust=b0588ba8073eaa0680fbf09c47b5be54">
+    <link rel="icon" type="image/png" sizes="96x96" href="/favicon-96x96.png?ckcachebust=ea5acc3bd67903d7dd0e28dd48e86852">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png?ckcachebust=62c6b2d3263b0a7f9d906c51e8c8f942">
+    <link rel="manifest" href="/manifest.json?ckcachebust=41b3ab2d3c860df26b15e5e97e065d58">
     <title >Blair Shen</title>
 </head>
 
@@ -370,12 +370,13 @@
 				<p>Blair Shen &copy; 2020</p>
 		</footer>
 		
-		<script src="js/jquery-3.2.1.min.js?ckcachebust=5ff90121b668a1604a3db2c317606b18"></script>
-		<script src="js/lightbox.min.js?ckcachebust=91a901f0e5cf4fc69db8cc9a4a047727"></script>
-		<script src="js/aos.js?ckcachebust=7466b42165723d69708869c4bab28755"></script>
-		<script src="js/main.js?ckcachebust=412aaf4618c3d6e19394755b9cb883f0"></script>
-		<script src="js/form.js?ckcachebust=81b3bc86cebfe7bf57765389a3152936"></script>
-		<script src="js/typewriter.js?ckcachebust=6def9788abc2abfdabf3e1561f54e789"></script>
+		<script src="js/jquery-3.2.1.min.js?ckcachebust=e360ad53fdc4d8f3badea1f69661d8dc"></script>
+		<script src="js/lightbox.min.js?ckcachebust=39a68b616f46624da0d79eba7a2ba0b4"></script>
+		<script src="js/aos.js?ckcachebust=5997d28c863dded24f8139857e0a6a09"></script>
+		<script src="js/main.js?ckcachebust=37438f89677f2a40bacef2cf2f290cd9"></script>
+		<script src="js/form.js?ckcachebust=977c3b595b1b7788fdf3f77e2f77c8ba"></script>
+		<script src="js/typewriter.js?ckcachebust=0032afe04e3df0598c618a6f6911ef3c"></script>
+		<script src="js/mixitup.min.js?ckcachebust=609802166"></script>
 
 	</body>
 </html>
