--- a/fomc.html
+++ b/fomc.html
@@ -317,7 +317,7 @@
 			<section class="solution banner">
 				<div class="solution-content">
 					<h2>Live Design</h2>
-					<img src="imgs/fomc_live.png" alt="Final Iteration of Coupon Code">
+					<video src="imgs/fomc_live.mp4" controls autoplay muted></video>
 				</div>
 			</section>
 
