--- a/fomc.html
+++ b/fomc.html
@@ -36,7 +36,7 @@
 	<title >Blair Shen | Fruit of the Month Club</title>
 </head>
 
-	<body>
+	<body data-active-nav-group="work">
 
 	<header class="header">
 	    <div class="header-logo">
@@ -47,10 +47,10 @@
 	
 	    <nav class="header-nav">
 	        <ul>
-	            <li><a href = "index.html#home_h1" ><div class="header-item">Work</div></a></li>
-	            <li><a href = "graphic.html" ><div class="header-item">Playground</div></a></li>
-	            <li><a href = "about.html" ><div class="header-item">About</div></a></li>
-	            <li><a href = "https://drive.google.com/file/d/1OekFso5PZZfHPDYHy_KhTiAXB17vkZ1y/view" target="_blank"><div class="header-item">Resume</div></a></li>
+	            <li><a href = "index.html#home_h1" ><div class="header-item nav-group-work">Work</div></a></li>
+	            <li><a href = "graphic.html" ><div class="header-item nav-group-playground">Playground</div></a></li>
+	            <li><a href = "about.html" ><div class="header-item nav-group-about">About</div></a></li>
+	            <li><a href = "https://drive.google.com/file/d/1OekFso5PZZfHPDYHy_KhTiAXB17vkZ1y/view" target="_blank"><div class="header-item nav-group-resume">Resume</div></a></li>
 	         </ul>
 	        
 	    </nav>
@@ -121,7 +121,7 @@
 			</section>
 			
 			<section class="statement text-block">
-				<div class="problem-space">
+				<div class="problem-space section-break">
 					<h2>Problem Space</h2>
 					<p>The conversion rate of Harry & David Fruit of the Month Club was going down. How can we re-think the interface and improve its usability and conversion rate?</p>
 				</div>
@@ -163,7 +163,7 @@
 						<div class="breakdown-floater" data-aos="fade-right" data-aos-anchor=".process" data-aos-anchor-placement="center-top"></div>
 					</span>
 					<h2>Research</h2>
-					<div class="step-block">
+					<div class="step-block section-break">
 						<h3 data-aos="text-underline">
 							Who is my customer?
 						</h3>
@@ -171,7 +171,7 @@
 							To have a clearer understanding of who I’m designing for, I gathered the club buyer data from merchandise analysts. Club buyers tend to be high income, single-family baby boomers, and more likely to be females (when compared to other H&D customer profiles). This customer profile data allows me to target the right audience in the next stage.
 						</p>
 					</div>
-					<div class="step-block">
+					<div class="step-block section-break">
 						<h3 data-aos="text-underline">
 							What are the current issues?
 						</h3>
@@ -207,7 +207,7 @@
 							</li>
 						</ol>
 					</div>
-					<div class="step-block">
+					<div class="step-block section-break">
 						<h3 data-aos="text-underline">
 							What did I find out?
 						</h3>
@@ -223,7 +223,7 @@
 						<div class="breakdown-floater" data-aos="fade" data-aos-anchor=".ideation" data-aos-anchor-placement="top-center"></div>
 					</span>
 					<h2>Ideation</h2>
-					<div class="step-block">
+					<div class="step-block section-break">
 						<h3 data-aos="text-underline">
 							What are my goals?
 						</h3>
@@ -235,7 +235,7 @@
 							<li>Make the page modern and clean.</li>
 						</ol>
 					</div>
-					<div class="step-block">
+					<div class="step-block section-break">
 						<h3 data-aos="text-underline">
 							How can I make it happen?
 						</h3>
@@ -259,7 +259,7 @@
 						<div class="breakdown-floater" data-aos="fade" data-aos-anchor=".prototype" data-aos-anchor-placement="top-center"></div>
 					</span>
 					<h2>Prototype</h2>
-					<div class="step-block">
+					<div class="step-block section-break">
 						<h3 data-aos="text-underline">
 							How would it actually look and feel?
 						</h3>
@@ -273,7 +273,7 @@
 						<div class="breakdown-floater" data-aos="fade" data-aos-anchor=".test" data-aos-anchor-placement="top-center"></div>
 					</span>
 					<h2>Test</h2>
-					<div class="step-block">
+					<div class="step-block section-break">
 						<h3 data-aos="text-underline">
 							Are the interactions intuitive?
 						</h3>
