--- a/index.html
+++ b/index.html
@@ -289,8 +289,8 @@
 		</div>
 		<div class="bg_ivory">
 			<div class = "greeting">
-				<h2>Some of my talks</h2>
-				<p>I love contributing what I learned back to design communities.<br>Here are some selected talks I gave last year! :)</p>
+				<h2>Check me out!</h2>
+				<p>As a non-native speaker, I challenged myself to seize the opportunity of speaking in public. Big shout-out to Ignite UX Michigan and UMSI!!</p>
 					<video width="1152" src="imgs/Ignite UX.mp4" controls autoplay muted></video>
 					<video width="1152" src="imgs/Passion Pitch.mp4" controls autoplay muted></video>
 			</div>
