--- a/index.html
+++ b/index.html
@@ -290,7 +290,7 @@
 		<div class="bg_ivory">
 			<div class = "greeting">
 				<h2>Check me out!</h2>
-				<p>As a non-native speaker, I challenged myself to seize the opportunity of speaking in public. Big shout-out to Ignite UX Michigan and UMSI!!</p>
+				<p>As a non-native speaker, I challenged myself to seize the opportunity of speaking in public.<br>Big shout-out to Ignite UX Michigan and UMSI!!</p>
 					<video width="1152" src="imgs/Ignite UX.mp4" controls autoplay muted></video>
 					<video width="1152" src="imgs/Passion Pitch.mp4" controls autoplay muted></video>
 			</div>
