--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
 			</div>
 		
 
-		<h1 id="home_h1">Selected Projects</h1>
+		<h1 id="home_h1">Selected projects</h1>
 
 		<div class="buttons">
 				<button type="button" class="button" data-filter="all">All</button>
