--- a/yahoo.html
+++ b/yahoo.html
@@ -47,10 +47,10 @@
 
     <nav class="header-nav">
         <ul>
-            <li><a href = "index.html#home_h1" ><div class="header-item">Work</div></a></li>
-            <li><a href = "graphic.html" ><div class="header-item">Playground</div></a></li>
-            <li><a href = "about.html" ><div class="header-item">About</div></a></li>
-            <li><a href = "https://drive.google.com/file/d/1OekFso5PZZfHPDYHy_KhTiAXB17vkZ1y/view" target="_blank"><div class="header-item">Resume</div></a></li>
+            <li><a href = "index.html#home_h1" ><div class="header-item nav-group-work">Work</div></a></li>
+            <li><a href = "graphic.html" ><div class="header-item nav-group-playground">Playground</div></a></li>
+            <li><a href = "about.html" ><div class="header-item nav-group-about">About</div></a></li>
+            <li><a href = "https://drive.google.com/file/d/1OekFso5PZZfHPDYHy_KhTiAXB17vkZ1y/view" target="_blank"><div class="header-item nav-group-resume">Resume</div></a></li>
          </ul>
         
     </nav>
