--- a/shard.html
+++ b/shard.html
@@ -75,7 +75,7 @@
 
 				<div class="contribution card" data-aos="fade-up" data-aos-anchor=".summary" data-aos-offset="300">
 					<h3>My Contribution</h3>
-					<p>My role was focused on conducting user interviews and analysis; the UI design of Flow and Comment features; and the video editing.</p>
+					<p>My role was focused on conducting user interviews and analysis; the UI design of Note, Journal, and demo features; and the video editing for the final product pitch.</p>
 					<!--<div class="stat-result">
 						<div class="label">Upsell Purchase</div>
 						<div class="stat-increase">
@@ -394,13 +394,14 @@
 					<span data-aos="hide-fade" data-aos-anchor=".solution" data-aos-anchor-placement="top-center">
 						<div class="breakdown-floater" data-aos="fade" data-aos-anchor=".test" data-aos-anchor-placement="top-center"></div>
 					</span>-->
-					<!--<h2>Test</h2>
+					<h2>Lo-fi Prototype</h2>
 					<div class="step-block section-break">
-						<h3 data-aos="text-underline">
-							Are the interactions intuitive?
-						</h3>
-						<p>Before I began testing, I made multiple variations within the prototype to test specific interactions.</p>
-						<h4>Experiment 1:
+						<h3>Update information and design from other tools to the standalone platform – Shard, and collect feedback from it.</h3>
+						<p>Keeping the above decisions in mind, we started doing wireframes and prototypes to demonstrate how we could integrate design tools and communication tools (Sketch and Slack as examples) with our standalone platform – Shard to support information integration, design presentation, and design documentation by providing features such as Note, Comment, Flow, and Demo.</p>
+						<div><a href="imgs/shard_lofi@2x.png" data-lightbox="gallery" data-title="Low-fi prototype" aria-label="Low-fi prototype"><img src="./imgs/shard_lofi.png" alt="Low-fi prototype"></a></div>
+						
+						
+						<!--<h4>Experiment 1:
 							Do our customers react better to a touch-friendly, button UI or a traditional dropdown?
 						</h4>
 						<p>I wanted to update the design to something that felt more clean and modern while also being more mobile-friendly. It looked nice but it was a less familiar UI and I had to be sure it would work for my users. Thankfully, the initial tests showed that users appreciated the interaction.</p>
