--- a/fomc.html
+++ b/fomc.html
@@ -73,7 +73,7 @@
 					<p>The conversion rate of Harry & David Fruit of the Month Club was suffering. I got the opportunity to examine usability issues and re-design the interface to make it more modern and intuitive.</p>
 				</div>
 
-				<div class="contribution card" data-aos="fade-up" data-aos-anchor=".summary" data-aos-offest="300">
+				<div class="contribution card" data-aos="fade-up" data-aos-anchor=".summary" data-aos-offset="300">
 					<h3>My Contribution</h3>
 					<p>Conducted usability tests, re-designed and shipped the product page. The new design increased upsell purchase by 17.09% and revenue by 14.11%.</p>
 					<div class="stat-result">
@@ -105,7 +105,7 @@
 					<div class="skills">
 						<h3>Skills:</h3>
 						<ul>
-							<li>Usability testing</li>
+							<li>Remote usability testing</li>
 							<li>Wireframing</li>
 							<li>Prototyping</li>
 							<li>A/B testing</li>
