--- a/index.html
+++ b/index.html
@@ -165,16 +165,34 @@
 				<button type="button" class="button" data-filter=".research">Research</button>
 		</div>
 		<div class = "mix_container"> 
-
 			<div class="mix design">
 				<a href="fomc.html" data-title="Fruit of the Month Club" aria-label="Fruit of the Month Club">
 					<div class="mix-overlay"></div>
 					<img src="imgs/d_fomc.png" alt="Fruit of the Month Club">
 				</a>
-				<div class="mix-details fadeIn-top">
-					<h3>Harry &amp; David</h3>
-					<p>Fruit of the Month Club | Web</p>
-				</div>
+					<div class="mix-details fadeIn-top">
+						<h3>Read Case Study</h3>
+						<p>E-Commerce | Responsive Web</p>
+					</div>
+
+					<div class="project_detail">
+						<h3>Harry &amp; David</h3>
+					</div>
+			</div>
+
+			<div class="mix design">
+				<a href="shard.html" data-title="Shard" aria-label="Shard">
+					<div class="mix-overlay"></div>
+					<img src="imgs/d_shard.png" alt="Shard">
+				</a>
+					<div class="mix-details fadeIn-top">
+						<h3>Read Case Study</h3>
+						<p>Collaboration Tool | Web App</p>
+					</div>
+
+					<div class="project_detail">
+						<h3>Shard</h3>
+					</div>
 			</div>
 
 			<div class="mix design">
@@ -183,21 +201,28 @@
 						<img src="imgs/d_juvo.png" alt="AthleteJuvo">
 					</a>
 					<div class="mix-details fadeIn-top">
+						<h3>Read Case Study</h3>
+						<p>Gamification | App</p>
+					</div>
+					<div class="project_detail">
 						<h3>AthleteJuvo</h3>
-						<p>Smart rehab assistant | App</p>
+						<!--<p>Smart Rehab Assistant| App</p>-->
 					</div>
 			</div>
 
-			<div class="mix design">
+			<!--<div class="mix design">
 				<a href="spsc.html" data-title="SPSC" aria-label="SPSC">
 					<div class="mix-overlay"></div>
 					<img src="imgs/d_spsc.png" alt="SPSC">
 				</a>
 				<div class="mix-details fadeIn-top">
-						<h3>St. Patrick Senior Center</h3>
-						<p>Website revamp project | Web</p>
+						<h3>Read Case Study</h3>
+						<p>NGO | Web</p>
 				</div>
-			</div>
+				<div class="project_detail">
+					<h3>St. Patrick Senior Center</h3>
+				</div>
+			</div>-->
 
 			<div class="mix research">
 				<a href="yahoo.html" data-title="yahoo" aria-label="yahoo">
@@ -205,8 +230,11 @@
 					<img src="imgs/r_yahoo.png" alt="yahoo">
 				</a>
 				<div class="mix-details fadeIn-top">
-						<h3>Yahoo Native Ads Study</h3>
-						<p>Mixed methods usability study | Research</p>
+						<h3>Read Case Study</h3>
+						<p>Eye-tracking | Mobile Devices</p>
+				</div>
+				<div class="project_detail">
+					<h3>Yahoo Native Ads Study</h3>
 				</div>
 			</div>
 
@@ -216,8 +244,11 @@
 					<img src="imgs/d_arvr.png" alt="ARVR">
 				</a>
 				<div class="mix-details fadeIn-top">
-						<h3>AR/VR mini projects</h3>
-						<p>A VR design inspiration guide & <br>Amazon AR view redesign</p>
+						<h3>Read Case Study</h3>
+						<p>A VR Design Inspiration Guide & <br>Amazon AR View Redesign</p>
+				</div>
+				<div class="project_detail">
+					<h3>AR/VR Mini Projects</h3>
 				</div>
 			</div>
 
@@ -227,8 +258,11 @@
 					<img src="imgs/d_ui.png" alt="UI">
 				</a>
 				<div class="mix-details fadeIn-top">
-						<h3>UI design</h3>
+						<h3>Read Case Study</h3>
 						<p>Graphic &amp; UI playground</p>
+				</div>
+				<div class="project_detail">
+					<h3>UI Design</h3>
 				</div>
 			</div>
 
@@ -243,14 +277,18 @@
 					</div>
 				</div>-->
 
-			<div class="mix research">
+			<!--<div class="mix research">
 				<a href="networking.html" data-title="Networking" aria-label="Networking">
 					<div class="mix-overlay"></div>
 					<img src="imgs/r_network.png" alt="Networking">
 				</a>
 				<div class="mix-details fadeIn-top">
-						<h3>Networking study</h3>
-						<p>A UX study for online job boards | Research</p>
+						<h3>Read Case Study</h3>
+						<p>UX Research | Concept</p>
+				</div>
+				<div class="project_detail">
+					<h3>Networking Study</h3>
+					<p>A UX Study for Online Job Boards | UX Research</p>
 				</div>
 			</div>
 
@@ -260,10 +298,14 @@
 					<img src="imgs/r_zoomin.png" alt="ZoomIn">
 				</a>
 				<div class="mix-details fadeIn-top">
-						<h3>Michigan ZoomIn</h3>
-						<p>A usability study for a crowdsourcing service | Research</p>
+						<h3>Read Case Study</h3>
+						<p>UX Research | Web</p>
 				</div>
-			</div>
+				<div class="project_detail">
+					<h3>Michigan ZoomIn</h3>
+					<p>Usability Study for a Crowdsourcing Service | UX Research</p>
+				</div>
+			</div>-->
 
 			<!--<div class="mix research">
 				<a href="#" data-title="AADL" aria-label="AADL">
